--- a/.classpath
+++ b/.classpath
@@ -6,5 +6,6 @@
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/Roz/Downloads/jsoup-1.7.2-javadoc.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
