--- a/.classpath
+++ b/.classpath
@@ -7,5 +7,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="C:/Users/Roz/Downloads/jsoup-1.7.2-javadoc.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Roz/Downloads/jsoup-1.7.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Roz/Downloads/jsoup-1.7.2-sources.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
